# WBParser

./: .gitignore  CLAUDE.md  DEPLOY.md  SPEC.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/: keyboards_all.py  middlewares_all.py  routers_all.py  states.py
bot/handlers/: add_product.py  delete_product.py  edit_product.py  help_handler.py  list_products.py
bot/services/: task_service.py  user_service.py
core/: config.py  exceptions.py  logger.py  utils.py
database/: base_model.py  db.py
database/migrations/: env.py
database/models/: __init__.py  notification.py  product.py  product_price.py  product_seller.py  search_task.py  task_exclude_word.py  task_product_price.py  user.py
database/repositories/: notification_repository.py  price_repository.py  product_repository.py  product_seller_repository.py  task_product_price_repository.py  task_repository.py  user_repository.py
docker/: bot.Dockerfile  event_detector.Dockerfile  notifier.Dockerfile  parser.Dockerfile
event_detector/detector/: price_cache.py  price_detector.py
infrastructure/http/: http_client.py  proxy_pool.py
infrastructure/redis/: redis_cache.py  redis_client.py  redis_streams.py
infrastructure/telegram/: telegram_client.py
notifier/services/: notification_service.py
notifier/worker/: notification_worker.py  rate_limiter.py
observability/: __init__.py  runtime.py
parser/engine/: parser_engine.py  scheduler.py  worker_pool.py
parser/processing/: deduplicator.py  filters.py  (+2 more)
tests/: test_filters_relevance.py  test_wb_parsing_and_prices.py
(+5 files in other folders)
