[tool.poetry]
name = "wb-parser-tg-bot"
version = "0.1.0"
description = "Wildberries price monitoring Telegram bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.0.0"
httpx = "^0.25.0"
socksio = "^1.0.0"
orjson = "^3.9.0"
SQLAlchemy = "^2.0.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.0"
redis = "^5.0.0"
loguru = "^0.7.0"
sentence-transformers = "^2.2.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
rapidfuzz = "^3.0.0"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"

[tool.poetry.scripts]
bot = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
